find all customers algorithm added